Resolve footer styles on mobile.

--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -121,9 +121,17 @@
     grid-gap: 2vmin;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    padding-top: 10px;
 
     @media(max-width: $tablet-breakpoint) {
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    .widget.series {
+      @media(max-width: $tablet-breakpoint) {
+        grid-column: span 2;
+        width: unset;
+      }
     }
   }
 
@@ -132,29 +140,42 @@
     font-family: $header-font;
     text-transform: uppercase;
     text-rendering: optimizelegibility;
-    font-size: 1.15em;
+    font-size: 1.25em;
     margin: 0 0 20px;
     opacity: .88;
+
+    @media(max-width: $tablet-breakpoint) {
+      font-size: 1.2em;
+      margin: 0 0 15px;
+    }
+  }
+
+  .footer-nav-link {
+    transition: $transition;
+    font-family: $body-font-medium;
+    color: $color-header-grey;
+    margin-bottom: 6px;
+    font-size: 1.1em;
+    padding: 0;
+    opacity: .8;
+    transition: $transition;
 
     @media(max-width: $tablet-breakpoint) {
       font-size: 1.2em;
     }
 
     @media(max-width: $mobile-breakpoint) {
-      font-size: 1.15em;
+      margin-bottom: 7px;
     }
-  }
 
-  .footer-navigation-link {
-    transition: $transition;
-    font-family: $body-font-medium;
-    color: $color-header-grey;
-    opacity: .8;
+    .footer-navigation-link {
+      color: #4e576a;
+      transition: $transition;
 
-    &:hover {
-      cursor: pointer;
-      color: $color-hover;
-      opacity: 1;
+      &:hover {
+        cursor: pointer;
+        color: $color-hover;
+      }
     }
   }
 
@@ -170,20 +191,21 @@
     }
 
     @media(max-width: $mobile-breakpoint) {
-      margin: 20px auto 0;
+      margin: 40px auto 0;
       padding-top: 20px;
     }
 
     .copyright {
       margin-bottom: unset;
-      font-size: .9em;
-      color: $color-lightgrey;
+      font-size: 1.05em;
+      color: #475162;
       font-family: $body-font-medium;
       line-height: 1;
+      opacity: .8;
 
       @media(max-width: 767px) {
-        margin: 0 auto;
-        font-size: .85em;
+        margin: 0;
+        font-size: .95em;
       }
 
       @media(max-width: $mobile-breakpoint) {
@@ -206,10 +228,11 @@
 
   .widget {
     width: max-content;
+    margin-bottom: 0;
 
     @media (max-width: $tablet-breakpoint) {
       width: 100%;
-      margin-bottom: 40px;
+      margin-bottom: 30px;
       max-width: unset !important;
 
       &:last-of-type {
@@ -219,6 +242,9 @@
 
     &.social {
       height: unset;
+      margin-bottom: 0;
+      max-width: unset;
+      width: 280px;
 
       @media (max-width: $tablet-breakpoint) {
         height: 35px !important;
@@ -227,10 +253,12 @@
 
       @media (max-width: $mobile-breakpoint) {
         width: 300px !important;
+        margin-bottom: 5px;
       }
 
       .social-media-button {
         font-size: 1.7em;
+        margin-right: 15px;
 
         &:hover {
           cursor: pointer;
@@ -238,18 +266,10 @@
         }
 
         @media(max-width: $tablet-breakpoint) {
-          font-size: 1.6em;
+          font-size: 1.8em;
 
           &:hover {
-            font-size: 1.8em;
-          }
-        }
-
-        @media(max-width: $mobile-breakpoint) {
-          font-size: 1.6em;
-
-          &:hover {
-            font-size: 1.8em;
+            font-size: 2em;
           }
         }
 
@@ -270,8 +290,8 @@
       margin-bottom: 15px;
       transition: $transition;
 
-      @media(max-width: $mobile-breakpoint) {
-        width: 230px;
+      @media(max-width: $tablet-breakpoint) {
+        width: 280px;
       }
 
       &:hover {
@@ -280,24 +300,30 @@
     }
 
     .footer-description {
-      font-family: $body-font-light;
+      font-family: $body-font;
       color: #384453;
       line-height: 1.5;
-      font-size: 1.05em;
+      font-size: 1.1em;
 
       @media(max-width: $tablet-breakpoint) {
         width: 60vw;
+        color: #84898e;
+        font-size: 1.2em;
       }
 
       @media(max-width: $mobile-breakpoint) {
         width: 100%;
-        line-height: 1.3;
+        font-size: 1.2em;
       }
     }
 
     &.info {
       max-width: 29%;
-      margin-right: 30px;
+      margin-right: 40px;
+
+      @media(max-width: $tablet-breakpoint) {
+        margin-right: 30px;
+      }
     }
 
     .footer-list {
@@ -305,44 +331,42 @@
       padding: 0;
       list-style: none;
 
-      ul,
-      ol {
-        padding: 0;
-      }
 
-      li {
-        display: block;
-        margin-bottom: 15px;
-        padding: 0;
-        line-height: 1.2;
-        text-rendering: optimizelegibility;
-        color: #414d5a;
-        font-size: 1.05em;
+      .subfooter {
+        margin: 0 auto;
 
-        @media(max-width: $mobile-breakpoint) {
-          font-size: 1.15em;
+        ul,
+        ol {
+          padding: 0;
         }
 
-        a {
-          transition: $transition;
-          font-family: $body-font-medium;
-          color: $color-header-grey;
-          opacity: .8;
+        li {
+          display: block;
+          margin-bottom: 15px;
+          padding: 0;
+          line-height: 1.2;
+          text-rendering: optimizelegibility;
+          color: #414d5a;
+          font-size: 1.05em;
 
-          &:hover {
-            cursor: pointer;
-            color: $color-hover;
-            opacity: 1;
+          @media(max-width: $mobile-breakpoint) {
+            font-size: 1.15em;
+          }
+
+          a {
+            transition: $transition;
+            font-family: $body-font-semibold;
+            color: $color-header-grey;
+            opacity: .8;
+
+            &:hover {
+              cursor: pointer;
+              color: $color-hover;
+              opacity: 1;
+            }
           }
         }
       }
-    }
-
-    &.social {
-      margin-bottom: 0;
-      max-width: unset;
-      width: 280px;
-      height: unset;
     }
   }
 }
