--- a/src/scss/sidebar.scss
+++ b/src/scss/sidebar.scss
@@ -77,8 +77,8 @@
         transition: $transition;
 
         &:hover {
-          border: 1px solid #6b7583;
-          background-color: #6b7583;
+          border: 1px solid #78849c;
+          background-color: #78849c;
           cursor: pointer;
           color: white !important;
         }
